--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: cpp
 before_install:
     - echo "yes" | sudo add-apt-repository "deb http://archive.ubuntu.com/ubuntu `lsb_release -sc` main universe restricted multiverse"
-    # Piggy backing off OpenMW's PPA repo for libsdl2 packages. Thanks OpenMW.
-    - echo "yes" | sudo apt-add-repository ppa:openmw/openmw
+    - echo "yes" | sudo apt-add-repository ppa:dan-skorupski/ppa
     - sudo apt-get update -qq
     - sudo apt-get install -qq libsdl2-dev
+    - sudo apt-get install -qq ninja-build
 script:
     - ./make_ninja_build.py
     - ninja
