--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: cpp
 before_install:
     - echo "yes" | sudo add-apt-repository "deb http://archive.ubuntu.com/ubuntu `lsb_release -sc` main universe restricted multiverse"
-    - echo "yes" | sudo apt-add-repository ppa:dan-skorupski/ppa
+    - echo "yes" | sudo apt-add-repository ppa:openmw/openmw
+    - echo "yes" | sudo apt-add-repository ppa:saiarcot895/chromium-dev
     - sudo apt-get update -qq
     - sudo apt-get install -qq libsdl2-dev
     - sudo apt-get install -qq ninja-build
